[package]
name = "fitness-tracking"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.7.3"
log = {version="0.4.17" }
serde = "1.0.152"
serde_json = "1.0.93"
simple_logger = "4.0.0"
tokio = "1.25.0"

[dev-dependencies]
pretty_assertions = "1.3.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
